--- a/API/package.json
+++ b/API/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "elevenlabs": "^0.9.1",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
-    "firebase-admin": "^12.2.0"
+    "firebase-admin": "^12.2.0",
+    "fs": "^0.0.1-security"
   }
 }
