--- a/API/package.json
+++ b/API/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "elevenlabs": "^0.9.1",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1"
   }
 }
